Fix grid lines and grid divs sizing. Refactor js
Grid lines are now the same size. Depending on where the grid item is
located, different borders are displayed so that the borders don't
overlap and combine into a bigger shared border.

The grid container item divs were previously sized inadequately. Now,
grid-template is used so they have proper sizing.

--- a/style.css
+++ b/style.css
@@ -25,17 +25,11 @@ main {
 }
 
 /* customize section*/
-button {
-    font-size: 16px;
-    font-weight: bold;
-    color: black;
-    background-color: white;
-    padding: 10px;
-}
-
-.clicked-button {
-    color: white;
-    background-color: black;
+#customize-section {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    
 }
 
 #colorpicker {
@@ -50,36 +44,50 @@ button {
     border-radius: 50%;;
 }
 
-#customize-section {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    
-}
-
 #grid-size-container {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
+button {
+    font-size: 16px;
+    font-weight: bold;
+    color: black;
+    background-color: white;
+    padding: 10px;
+}
+
+.clicked-button {
+    color: white;
+    background-color: black;
+}
+
 /* grid */
 #grid-container {
-    display: flex;
-    flex-wrap: wrap;
     border: 2px solid black;
     width: 480px;
     height: 480px;
+    display: grid;
+    grid-template-rows: repeat(16, 1fr);
+    grid-template-columns: repeat(16, 1fr);
 }
 
-.grid-item {
+#grid-container > div {
     box-sizing: border-box;
-    width: 30px;
-    height: 30px;
 }
 
-.grid-lines {
-    border: 1px solid gray;
+.grid-lines-bottom {
+    border-bottom: 1px solid gray;
+}
+
+.grid-lines-right {
+    border-right: 1px solid gray;
+}
+
+.grid-lines-bottom-right {
+    border-bottom: 1px solid gray;
+    border-right: 1px solid gray;
 }
 
 /* footer */
